--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -1,23 +1,33 @@
 {% extends "template.html" %}
 
-{% block buttons %}
-    <a href="#logIn" role="button" class="btn btn-success" data-toggle="modal">Log In</a>
-    <a href="#signUp" role="button" class="btn btn-primary" data-toggle="modal">Sign Up</a>
-{% endblock %}
+{% block title  %}
+    Store :: Better Grip
+{% endblock  %}
+
+
 
 {% block content %}
  <div class="hero-unit"><h1>Store</h1></div> <hr/><br/>
-    <div class="span8 offset2">	
-	<div class="media hero-unit">
-    {% for comment in comments %}
-	    <a  href="#">
-		<img class="media-object" src="/static/Pictures/download.png">
-	    </a>
-		<div class="media-body">
-		<h4 class="media-heading">{{ comment.author.nickname }}</h4>
-		<p> {{ comment.body }} </p>
-		<br/><hr/>
-    {% endfor %}
+ <div class="row" align="center">
+  	<div class="span4">
+  		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSD7EM-JA4kJ5ruLBbdevSyDLqBbc7FL2AzILatuZMWSqhm40A" > 
+  		<b>Silicone steering wheel grip</b>
+  		<i>Glow in the dark</i>
+  		
+  		</div>
+  	<div class="span4">
+  		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSD7EM-JA4kJ5ruLBbdevSyDLqBbc7FL2AzILatuZMWSqhm40A" class="img-polaroid">
+  		<b>Silicone steering wheel grip</b>
+  		<i>Glow in the dark</i>
+  		
+  		</div>
 	</div>
-    </div>  
+</div>
+
+{% endblock  %}
+
+
+{% block buttons %}
+    <a href="#logIn" role="button" class="btn btn-success" data-toggle="modal">Log In</a>
+    <a href="#signUp" role="button" class="btn btn-primary" data-toggle="modal">Sign Up</a>
 {% endblock %}
