--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -7,17 +7,11 @@
 
 {% block content %}
  <div class="hero-unit"><h1>Store</h1></div> <hr/><br/>
-    <div class="span8 offset2">	
-	<div class="media hero-unit">
-    {% for comment in comments %}
-	    <a  href="#">
-		<img class="media-object" src="/static/Pictures/download.png">
-	    </a>
-		<div class="media-body">
-		<h4 class="media-heading">{{ comment.author.nickname }}</h4>
-		<p> {{ comment.body }} </p>
-		<br/><hr/>
-    {% endfor %}
+    <div class="row">
+  <div class="span2">...</div>
+  <div class="span2">...</div>
+</div>
+
 	</div>
     </div>  
 {% endblock %}
